fixes too wide contents

--- a/css/screen.css
+++ b/css/screen.css
@@ -130,14 +130,16 @@ img {
 }
 
 @media screen and (width: 320px) {
-	#full > article * {
+	#full > article * , #full > article pre {
 		max-width: 300px !important;
+		overflow: auto;
 	}
 }
 
 @media screen and (width: 480px) {
 	#full > article * {
 		max-width: 460px !important;
+		overflow: auto;
 	}
 }
 
